• Adds logic to character aliases - considers if specific character doesnt have any aliases • Fixes issue where last card in character carousel is cut off

--- a/anime-archive/src/components/characterButton/characterButton.css
+++ b/anime-archive/src/components/characterButton/characterButton.css
@@ -1,12 +1,16 @@
 .characterCarouselCard {
   align-items: center;
-  justify-content: center;
   display: flex;
   margin: 2%;
   border-radius: 15px;
+  margin-right: 5%;
   min-width: 300px;
   height: 100px;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.characterCardPadding {
+  padding-right: 5%;
 }
 
 .characterCarouselImageContainer {
